# ttt5

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  docker-compose.yml  http_server_run.sh  http_server_run_docker.sh  http_server_run_locally.sh
.github/workflows/: backend.yml  frontend.yml
beast/: Dockerfile  Dockerfile_boost
beast/app/: http_server_awaitable.cpp  http_server_fast.cpp  http_server_sync.cpp
clion-remote-dev-env/: Dockerfile  README.md
dev_env/: Dockerfile  README.md
front/: .gitignore  Dockerfile  Dockerfile_old  default.conf  nginx.conf  package-lock.json
front/public/: global.css
front/src/: Dispatcher.svelte
svelte-app/: Dockerfile  nginx.conf  package-lock.json  package.json  server.js
yandex.cloud/API Gateway/: README.md
